﻿v0.5.7
* Fixed: Drop shadows on Alert countdown text.
* Fixed: Thalquur is now correctly Thalguur.
* Fixed: Drowned Halls registering as Guilded Prophecy (sneaky!)
* Added: German Translations for:
** Sicaron: Unhonly Contract trigger.
** Greenscale's Blight
** Oracle Aleria
** Greenscale
** Prince Hylas
** Duke Letarues
** River of Souls
** Warmaster Galenir
** Dark Foci
** Plutonus the Immortal
** Herald Gaurath
** Alsbeth the Discordant
** Drowned Halls
** Assault Commander Jorb
** Joloral Ragetide
** High Priestess Hydriss
** Guilded Prophecy
** Anrak the Foul
** Rise of the Phoenix
** High Priest Arakhurn
----
v0.5.6
* HotFix: Akylios Wave 1 timers and alerts.
----
v0.5.5
* Change: Reduced Inquisitor Garau's time-out by 2 seconds
* Change: Last attempt at fixing encounter wipe detection before 1.6.
* New: Added final template encounters before 1.6.
* Added: Rise of the Phoenix (template)
* Added: Ereandorn (template)
* Added: General Silgen (template)
* Added: Beruhast (template)
* Added: High Priest Arakhurn (template)
* Added: Drowned Halls (template)
* Added: Assault Commander Jorb (template)
* Added: Joloral Ragetide (template)
* Added: Isskal (template)
* Added: Uruluuk (template)
* Added: Guilded Prophecy (template)
* Added: Anrak the Foul (template)
* Added: Guurloth (template)
* Added: Thalquur (template)
* Added: High Priestess Hydriss (template)
----
v0.5.4
* New: Menu Groups for 20 and 10 Man Raids, Master Modes and Expert T1 and T2.
* New: Akylios 5 second warning Wave (P1) screen alert (flashing, blue).
* Change: Attempted to fix the continuing encounter issues, this will be re-addressed in 1.6.
----
v0.5.3
* Fixed: Alerts: Options were not working as intended.
* Fixed: Sicaron: Changed Trigger method for Unholy Contract.
* Fixed: Sicaron: Typo corrected in Trigger method.
* Added: Certain screen alerts now have prefixed countdown timer.
* Added: Sicaron: Red flashing personal alert for 5 seconds after Blue alert.